<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.android.themusicgenreator.MainActivity">

    <TextView style="@style/WelcomeMessageStyle"
        android:id="@+id/welcome_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <LinearLayout style="@style/BrowseLayoutStyle"
        android:id="@+id/browse_genres"
        android:background="@color/browse_genre_button_color"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintBottom_toTopOf="@+id/browse_cities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView style="@style/BrowseButtonsStyle"
            android:text="@string/browse_genres"
            android:drawableEnd="@drawable/guitar_acoustic"
            android:drawableStart="@drawable/guitar_electric"/>

        <TextView style="@style/BrowseButtonsSubtextStyle"
            android:text="@string/browse_genres_subtext"/>
    </LinearLayout>

    <LinearLayout style="@style/BrowseLayoutStyle"
        android:id="@+id/browse_cities"
        android:background="@color/browse_cities_button_color"
        app:layout_constraintTop_toBottomOf="@id/browse_genres"
        app:layout_constraintBottom_toTopOf="@+id/browse_countries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView style="@style/BrowseButtonsStyle"
            android:text="@string/browse_cities"
            android:drawableStart="@drawable/city"
            android:drawableEnd="@drawable/city"/>

        <TextView style="@style/BrowseButtonsSubtextStyle"
            android:text="@string/browse_cities_subtext"/>
    </LinearLayout>

    <LinearLayout style="@style/BrowseLayoutStyle"
        android:id="@+id/browse_countries"
        android:background="@color/browse_countries_button_color"
        app:layout_constraintTop_toBottomOf="@id/browse_cities"
        app:layout_constraintBottom_toTopOf="@+id/browse_playlists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView style="@style/BrowseButtonsStyle"
            android:text="@string/browse_countries"
            android:drawableStart="@drawable/earth"
            android:drawableEnd="@drawable/earth"/>

        <TextView style="@style/BrowseButtonsSubtextStyle"
            android:text="@string/browse_countries_subtext"/>
    </LinearLayout>

    <LinearLayout style="@style/BrowseLayoutStyle"
        android:id="@+id/browse_playlists"
        android:background="@color/browse_playlists_button_color"
        app:layout_constraintTop_toBottomOf="@id/browse_countries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView style="@style/BrowseButtonsStyle"
            android:text="@string/browse_playlists"
            android:drawableStart="@drawable/music"
            android:drawableEnd="@drawable/playlist_play"/>

        <TextView style="@style/BrowseButtonsSubtextStyle"
            android:text="@string/browse_playlists_subtext"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
